--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -1,34 +1,129 @@
-body{
+/*RESET BASICO*/
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+/*variaveis css*/
+:root{
+    --color-font1:#2E7D32;
+    --color-font2:#0277BD;
+    --color-font3:#757575;
+    --color-font4:rgb(4,25,32);
+    --gradient:linear-gradient(to top, rgba(0,0,0,0.6),rgba(0,0,0,0.3));
+    --font-size:4rem;
+}
+
+html{
+    /*calculo para converter o tamanho da fonte em 10px*/
+    font-size: 62.5%;
+    /*efeito de suavidade*/
+    scroll-behavior: smooth;
+}
 
 body{
-    background: #f0f0f0;
+    background: transparent;
 }
+
+nav ul{
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+    color: var(--color-font1);
+    font-weight: 900;
+    transition: color .3s;
+    font-size: 2rem;
+    text-transform: uppercase;
+}
+
+a:hover{
+    color:var(--color-font3)
+}
+
+.hero{
+    width: 100%;
+    min-height: 100vh;
+    padding: 3rem;
+    background-image: var(--gradient),url(../assets/lavoura\ imundada.webp);
+    background-repeat: no-repeat;
+    background-size:cover ;
+    color: var(--color-font1);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 header{
-    background:  #2E7D32;
-    color:#333;
-    padding: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 5px 5px 5px #555;
-    
-}
-header nav ul{
-    list-style: none;
-    display: flex;
-    gap:20px;
-}
-header nav ul li a{
-    text-decoration: none;
-    color:#555;
-    font-weight: 700;
 }
 
-header nav ul li a:hover{
-    color:rgb(204, 0, 0);
-    text-decoration: underline;
-    border: 2px solid #ccc;
+header h1{
+    font-size: var(--font-size);
+    position: relative;
+}
+.header-menu{
+    display: flex;
+    gap: 20px;
+}
+span{
+    color: var(--color-font3);
+}
+
+/*Menu Hamburguer*/
+.hamburguer{
+    cursor: pointer;
+    position: relative;
+    z-index: 2;
+    display: none;
+}
+.barra{
+    display: block;
+    width: 3rem;
+    height: .3rem;
+    background: var(--color-font1);
+    margin: .5rem auto;
+    border-radius: 5px;
+    transition: .5s;
+}
+
+
+/*responsividade*/
+
+@media(width <=1024px){
+
+    .header-menu{
+        width: 100%;
+        height: 100vh;
+        background: var(--gradient);
+        position: absolute;
+        z-index: 1;
+        top: 0;
+        left: -100%;
+        gap: 6rem;
+        flex-direction: column;
+        justify-content: center;
+        transition: 5s;
+    }
+    #titulo{
+        font-size: 2rem;
+    }
+    .active{
+        left: 0;
+    }
+    .hamburguer{
+        display: block;
+    }
+    .hamburguer.active .barra:first-child{
+        transform: translateY(8px) rotate(360deg) rotate(45deg);
+    }
+    .hamburguer.active .barra:nth-child(2){
+        opacity: 0;
+    }
+    .hamburguer.active .barra:last-child{
+        transform: translateY(-8px) rotate(-360deg) rotate(-45deg);
+    }
+}
