--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -9,9 +9,9 @@ body { background: #f5f5f5; color: #333; }
 /* HEADER */
 .hero {
   position: relative;
-  background: url('images/banner.jpg') center/cover no-repeat;
+  background: url('../assets/imagen_home.jpg') center/cover no-repeat;
   height: 90vh;
-  color: white;
+  color:rgb(200, 215, 230);
 }
 
 .navbar {
@@ -333,27 +333,4 @@ input:focus {
 .login-btn:hover {
   background: #256628;
 }
-
-/* Responsivo */
-@media(max-width: 900px) {
-  .container {
-    flex-direction: column;
-  }
-
-  .left-panel, .right-panel {
-    border-radius: 0;
-  }
-
-  .left-panel {
-    height: 250px;
-  }
-
-  .top-nav {
-    position: static;
-    text-align: right;
-    margin-bottom: 20px;
-  }
-}
-
-
 
