--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -65,6 +65,99 @@ body { background: #f5f5f5; color: #333; }
 }
 
 .btn:hover { opacity: 0.85; }
+/* HAMBURGUER */
+.hamburguer {
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  position: relative;
+  z-index: 1001;
+}
+
+.hamburguer .barra {
+  width: 25px;
+  height: 3px;
+  background-color: white;
+  border-radius: 2px;
+  transition: transform 0.5s ease, opacity 0.5s ease;
+  position: relative;
+}
+
+/* Ícone Hamburguer vira X */
+.hamburguer.ativo .barra:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+
+.hamburguer.ativo .barra:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburguer.ativo .barra:nth-child(3) {
+  transform: rotate(-45deg) translate(5px, -5px);
+}
+
+/* Estilo para o link ativo */
+.header-menu a.active {
+  color: #ffffff;
+  background-color: #388e3c;
+  padding: 6px 12px;
+  border-radius: 8px;
+  transition: background-color 0.3s;
+}
+
+/* RESPONSIVO */
+@media (max-width: 768px) {
+  .header-menu {
+    display: none;
+    width: 100%;
+    position: absolute;
+    top: 70px;
+    left: 0;
+    background-color: #2e7d32;
+    opacity: 0;
+    transform: translateY(-30px);
+    pointer-events: none;
+  }
+
+  .header-menu.ativo {
+    display: flex;
+    animation: slideDown 0.5s ease forwards;
+    pointer-events: auto;
+  }
+
+  .header-menu ul {
+    flex-direction: column;
+    padding: 20px 0;
+    gap: 15px;
+    align-items: center;
+    margin: 0;
+  }
+   @keyframes slideDown {
+    from {
+      opacity: 0;
+      transform: translateY(-30px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+ 
+
+.header-menu.animando-saida {
+  animation: slideUp 0.5s ease forwards;
+}
+
+  .hamburguer {
+    display: flex;
+  }
+}
+
 
 /* INTRO + CARDS */
 section { max-width: 1200px; margin: 60px auto; padding: 0 20px; }
